syntax="proto3";

package v4;
option go_package = ".;v4";

message MercuryObservationProto {
    uint32 timestamp = 1;

    bytes benchmarkPrice = 2;
    bool pricesValid = 5;

    int64 maxFinalizedTimestamp = 6;
    bool maxFinalizedTimestampValid = 7;

    bytes linkFee = 8;
    bool linkFeeValid = 9;
    bytes nativeFee = 10;
    bool nativeFeeValid = 11;

    uint32 marketStatus = 12;
    bool marketStatusValid = 13;
}
